# logseqSpringThing

./: .dockerignore  .env_template  .eslintrc.json  .gitignore  .prettierrc  AR.txt  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.production  GeminiWebsocketUpdates.md  NETWORK_SETUP.md  README.md  WEBSOCKET_TEST_PLAN.md  client.txt  code.txt  compute_forces.cu  compute_forces.ptx  config.yml  debug_log.ts  diff.patch  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  documentation-gap-analysis.json  documentation-gap-analysis.md  documentation-sync-report.md  index.html  index.ts  launch-docker.sh  logs.txt  main.rs  nginx.conf  nginx.dev.conf  output.txt  package-lock.json  package.json  pnpm-lock.yaml  promptAI.txt  server.txt  (+10 more)
.cargo/: audit.toml
.roo/: mcp.json
client/: README-websocket-diagnostics.md  diagnostics.ts  env.d.ts  implementationPlan.md  index.html  index.html.orig  index.ts  iterate-plan.md  iterate.html  iterate.ts  material-switcher.js  package-lock.json  package.json  package.json.bak  pnpm-lock.yaml  shader-test.html  shader-test.js  tailwind.config.js  tsconfig.json  vite-start.js  vite.config.ts  webgl-diagnostics.js  websocket-diagnostics-browser.js  websocket-diagnostics.ts  websocket-test.ts
client/components/: App.vue  ControlPanel.vue  DebugPanel.vue  ErrorBoundary.vue  ErrorMessage.vue  NodeInfoPanel.vue  PerformanceDebug.vue  chatManager.vue
client/composables/: useControlGroups.ts  useControlSettings.ts  useEffectsSystem.ts  useForceGraph.ts  useGraphSystem.ts  usePlatform.ts  useThreeScene.ts  useVisualization.ts
client/constants/: visualization.ts  websocket.ts
client/core/: NodeManager.ts  api.ts  constants.ts  debugState.ts  graphTypes.ts  initialize.ts  logger.ts  meshTypes.ts  physicsConstants.ts  resourceMonitor.ts  threeTypes.ts  types.ts  utils.ts
client/diagnostics/: nodeLabelDiagnostics.ts
client/docs/: flow.md
client/init/: forceDirected.ts
client/logging/: loggerImpl.ts
client/platform/: platformManager.ts
client/public/: audio-processor.js
client/rendering/: EdgeManager.js  EdgeManager.ts  EnhancedNodeManager.ts  HologramManager.ts  MetadataVisualizer.ts  SDFFontAtlasGenerator.ts  UnifiedTextRenderer.ts  VisualizationController.ts  nodes.ts  scene.ts  textRenderer.ts
client/services/: NostrAuthService.ts  SettingsEventEmitter.ts  SettingsLayoutManager.ts  SettingsPersistenceService.ts  SettingsPreviewManager.ts  errorTracking.ts  graphDataManager.ts  performanceOptimizer.ts  settingsService.ts  visualizationSettings.js  webSocketService.ts  websocketService.js  websocketService.ts
client/state/: SettingsObserver.ts  SettingsStore.ts  defaultSettings.ts  graphData.ts  settings.ts
client/stores/: binaryUpdate.ts  performanceMonitor.ts  settings.ts  visualization.ts  websocket.ts
client/types/: chart.d.ts  core.ts  d3-force-3d.d.ts  debug.ts  metadata.ts  performance.ts  settings.ts  shims-vue.d.ts  stores.ts  three-examples.d.ts  three-ext.d.ts  three.d.ts  vec3.ts  visualization.ts  vue-threejs.d.ts  websocket.ts  webxr.d.ts  xr.ts
client/ui/: ControlPanel.css  ControlPanel.ts  ModularControlPanel.css  ModularControlPanel.ts  controlPanelConfig.ts  index.ts
client/utils/: debug_log.ts  gpuUtils.ts  logger.ts  validation.ts
client/visualization/: HologramManager.ts  MetadataVisualizer.ts  VisualizationController.ts  core.js  effects.js  layout.js  nodes.js
client/websocket/: websocketService.ts
client/xr/: handInteraction.ts  xrInitializer.ts  xrInteraction.ts  xrSessionManager.ts  xrSetup.js  xrTypes.ts
data/: settings.yaml
data/markdown/: AI Scrapers.md  Adoption of Convergent Technologies.md  Agentic Metaverse for Global Creatives.md  Agentic Mycelia.md  Ai in Games.md  Artificial Intelligence.md  Bitcoin ETF.md  Bitcoin.md  ChatGPT.md  Coding support.md  ComfyUI.md  Death of the Internet.md  Debug Test Page.md  Decentralised Web.md  Digital Asset Risks.md  Distributed Identity.md  Energy and Power.md  Flux.md  Gemini.md  Llama.md  (+28 more)
docs/: GeminiWebsocketUpdates.md  README-bloom-effect.md  README-diagnostics.md  README-shader-fix.md  README-websocket-diagnostics.md  STRUCTURE.md  auth_implementation_tasks.md  codeState.txt  contributing.md  glossary.md  implementationPlan.md  implementation_plan_auth.md  implementation_plan_auth_revised.md  index.md  network.md  plan_modular_control_panel.md  plan_modular_control_panel_nostr.md  plan_modular_control_panel_nostr_technical.md  plan_modular_control_panel_tasks.md  plan_modular_control_panel_technical.md  plan_simplified_auth.md  progress-ar-handTracking.md  repo-map.md  todo-list.txt  voice-system.md
featureclient/: controlPanel.ts  index.html  indexTest.html  iterate.ts  structure.md
handlers/: gpu_compute.rs  graph_handler.rs  health.rs  metrics.rs  mod.rs
middleware/: auth.rs  rate_limit.rs
models/: backup.rs  graph.rs
nginx/: nginx.conf
platform/: PlatformManager.ts
reports/: swarm-auto-centralized-1750581755017.json
scripts/: check-rust-logs.sh  check-vite.sh  codebase.txt  compile_ptx.sh  debug.sh  dev-entrypoint.sh  dev.sh  diagnostics.sh  diff.patch  generateCodebase.sh  large_files_output.txt  launch-dev.sh  launch-docker.sh  launch-production.sh  launch.sh  o4-pro-prompt.txt  oldNetworkCode.sh  start.sh  test-api.sh  test.sh  test_all_endpoints.sh  test_endpoints.sh  test_settings.sh  todo.md  upgrade-refactor.md  workingGPU.diff
services/: backup_service.rs
shaders/: force_compute.wgsl
src/: app_state.rs  config.rs  generate_audio.py  index.ts  lib.rs  main.rs  main.ts  state.rs
state/: SettingsStore.ts  app_state.rs  defaultSettings.ts  graphData.ts
ui/: ControlPanel.ts  ErrorDisplay.ts  LoadingOverlay.ts
utils/: buffer_pool.rs  buffer_pool.ts  cache.rs  case_conversion.ts  connection_pool.rs  db_error.rs  db_pool.rs  db_utils.rs  gpu_compute.test.ts  gpu_compute.ts  graph_cache.ts  logger.ts  metrics.rs  recovery.rs
websocket/: binaryProtocol.ts  connectionState.ts  constants.rs  constants.ts  handler.rs  protocol.rs  routes.rs  websocketService.ts
xr/: XRManager.ts
(+511 files in other folders)
