[package]
name = "webxr"
version = "0.1.0"
edition = "2021"
description = "A WebXR graph visualization server with GPU-accelerated physics"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework and WebSocket
actix-web = { version = "4.4", features = ["compress-brotli", "compress-gzip", "rustls"] }
actix-cors = "0.6"
actix-files = "0.6"
actix-ws = "0.2"
actix = "0.13"
actix-web-actors = "4.2"
tungstenite = "0.20"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-tungstenite = { version = "0.20", features = ["rustls"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = { version = "0.13", features = ["toml"] }
dotenvy = "0.15"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# GPU/Compute
wgpu = { version = "0.17", features = ["spirv", "webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
naga = { version = "0.13", features = ["wgsl-in", "spv-out", "wgsl-out"] }
cudarc = "0.10"

# HTTP client and API
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
async-openai = "0.14"
backoff = { version = "0.4", features = ["tokio"] }

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
regex = "1.10"
lazy_static = "1.4"
sha1 = "0.10"
url = "2.5"

# Audio Processing
cpal = "0.15"
rodio = "0.17"
symphonia = { version = "0.5", features = ["mp3", "wav"] }
pyo3 = { version = "0.19", features = ["auto-initialize"], optional = true }

# 3D/WebXR/Graphics
nalgebra = "0.32"
kiss3d = "0.35"
gl = "0.14"
glow = "0.12"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "XrSystem",
    "XrSession",
    "XrSessionMode",
    "XrReferenceSpace",
    "XrReferenceSpaceType",
    "XrFrame",
    "XrPose",
    "XrView",
    "XrViewerPose",
    "XrWebGlLayer",
    "Navigator",
    "Window"
]}
js-sys = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.4"

[features]
default = ["gpu"]
gpu = []
python = ["dep:pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
