[package]
name = "webxr"
version = "0.1.0"
edition = "2021"
description = "A WebXR graph visualization server with GPU-accelerated physics"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework and WebSocket
actix-web = { version = "4.5", features = ["compress-gzip", "rustls"] }
actix-cors = "0.7"
actix-files = "0.6"
actix-ws = "0.2.5"
actix = "0.13"
actix-web-actors = "4.3"
tungstenite = "0.21"
rustls = "0.21.11"
rustls-pemfile = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = { version = "0.13", features = ["toml"] }
dotenvy = "0.15"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# GPU/Compute
wgpu = { version = "0.17", features = ["spirv", "webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
naga = { version = "0.13", features = ["wgsl-in", "spv-out", "wgsl-out"] }
cudarc = "0.10"

# HTTP client and API
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
async-openai = "0.14"
backoff = { version = "0.4", features = ["tokio"] }

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
regex = "1.10"
lazy_static = "1.4"
sha1 = "0.10"
url = "2.5"

# Math/Linear Algebra (needed for GPU compute)
nalgebra = "0.32"

# WebGL (minimal features needed for GPU compute visualization)
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window"
]}

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.4"

[features]
default = ["gpu"]
gpu = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
